# servidor-autenticacion-dnie-common

./: Cargo.toml
migrations/2025-11-22-215314-0000_initial_create/: down.sql  up.sql
migrations/2025-11-23-001131-0000_add_grant_tables/: down.sql  up.sql
src/: db.rs  oauth.rs
src/db/: models.rs  schema.rs
src/oauth/: client_cert_data.rs  dnie_endpoint.rs  mtls_extension.rs  pg_authorizer.rs  pg_issuer.rs  pg_registrar.rs
