[package]
name = "servidor-autenticacion-dnie-common"
version = "0.1.0"
edition = "2024"

[dependencies]
oxide-auth = "0.6.1"
oxide-auth-async = "0.2.1"
oxide-auth-axum = "0.6.0"
openidconnect = { version = "3.5.0", default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
diesel = { version = "2.3", features = ["uuid", "postgres", "chrono"] }
diesel-async = { version = "0.7", features = ["bb8", "pool", "postgres"] }
async-trait = "0.1.89"
argon2 = "0.5.3"
chrono = "0.4.42"
rand = "0.9.2"
sha2 = "0.10.9"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
